sandbox/output
Anagram.java:6: error: cannot find symbol
        return Arrays.asList(string);
               ^
  symbol:   variable Arrays
  location: class Anagram
1 error
